# vanadium

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  ruff.toml  tasks.py
lib/asn1c_libasn1parser/: CMakeLists.txt  generate_parser.sh
lib/asn1c_libasn1parser/include/asn1c/libasn1common/: asn1_ref.h  (+1 more)
lib/asn1c_libasn1parser/src/: asn1p_alloc.c  asn1p_class.c  asn1p_constr.c  asn1p_expr.c  asn1p_l.c  asn1p_l.l  asn1p_xports.c  asn1p_y.c  asn1p_y.y  asn1parser.c
lib/asn1c_libasn1parser/src/common/: asn1_ref.c  genhash.c
lib/lserver/: CMakeLists.txt
lib/lserver/include/: LSChannel.h  LSConnection.h  LSMessageToken.h  LSMethod.h  LSServer.h  LSTransport.h
lib/lserver/src/: Channel.cpp  Connection.cpp  StdioTransport.cpp
lib/lsprotocol/: CMakeLists.txt  pyproject.toml  run_generator.py  run_generator.sh
lib/lsprotocol/cpp/: __init__.py  builder.py  cpp_aliases.py  cpp_commons.py  cpp_enum.py  cpp_gen.py  cpp_structs.py  cpp_unions.py  cpp_utils.py
lib/lsprotocol/include/: JsonRpc.h  LSProtocol.h  LSProtocolAdjustments.h  LSProtocolBase.h  LSProtocolEx.h
lib/lsprotocol/src/: LSProtocolSerializers.cpp
lib/lsserver/: CMakeLists.txt
lib/lsserver/include/: LSChannel.h  LSExchange.h  LSMessageToken.h  LSServer.h  LSTransport.h
lib/lsserver/src/: Channel.cpp  StdioTransport.cpp
src/asn1/asn1c_astwrapper/: CMakeLists.txt
src/asn1/asn1c_astwrapper/src/: Asn1cAstWrapper.cpp
src/asn1/asn1c_astwrapper/test/: Asn1cAstWrapperTest.cpp
src/asn1/asn1c_libasn1parser/: CMakeLists.txt
src/asn1/asn1c_libasn1parser/src/: asn1p_alloc.c  asn1p_class.c  asn1p_constr.c  asn1p_expr.c  asn1p_integer.c  asn1p_l.l  asn1p_module.c  asn1p_oid.c  asn1p_param.c  asn1p_value.c  asn1p_y.y  asn1parser.c
src/asn1/ast_transformer/: CMakeLists.txt  README.md
src/asn1/ast_transformer/src/: Asn1AstTransformer.cpp  Asn1ModuleBasket.cpp  AstTransformer.cpp  ClassObjectParser.cpp  ClassSetResolver.cpp
src/asn1/ast_transformer/test/: Asn1AstTransformerTest.cpp  ClassObjectParserTest.cpp
src/asn1/xast/: CMakeLists.txt  README.md
src/asn1/xast/include/: Asn1AST.h  Asn1Scanner.h  Asn1Transparser.h
src/asn1/xast/src/: Asn1Scanner.cpp  Asn1Transparser.cpp
src/ast/: CMakeLists.txt  nodes.yml
src/ast/include/: AST.h  ASTDumper.h  ASTNodes.h  ASTTypes.h  Parser.h  Scanner.h
src/ast/include/utils/: ASTUtils.h
src/ast/src/: ASTInspector.cpp  Parser.cpp  Scanner.cpp
src/ast/src/utils/: ASTUtils.cpp
src/ast/test/: LineMappingTest.cpp  RangeTest.cpp
src/ast/tools/: nodegen.py
src/ast_asn1/: CMakeLists.txt  nodes.yml
src/ast_asn1/include/: Asn1AST.h  Asn1Scanner.h  Asn1Transparser.h
src/ast_asn1/src/: Asn1Parser.cpp  Asn1Scanner.cpp  Asn1Transparser.cpp
src/ast_asn1/test/: Asn1ScannerTest.cpp  Pt.cpp
src/ast_asn1/tools/: nodegen.py
src/ast_xasn1/: CMakeLists.txt
src/ast_xasn1/include/: Asn1AST.h
src/ast_xasn1/src/: Asn1Scanner.cpp  Asn1Transparser.cpp
src/core/: CMakeLists.txt  nodes.yml
src/core/include/: AST.h  ASTDumper.h  ASTNodes.h  ASTTypes.h  Builtins.h  BuiltinsSuperbases.h  Dumper.h  Filesystem.h  FsDirectory.h  ImportVisitor.h  Parser.h  Program.h  Scanner.h  ScopedNodeVisitor.h  Semantic.h  TypeChecker.h
src/core/include/utils/: ASTUtils.h  FileReader.h  SemanticUtils.h
src/core/src/: ASTInspector.cpp  Binder.cpp  Builtins.cpp  Parser.cpp  Program.cpp  Scanner.cpp  TypeChecker.cpp  VirtualFS.cpp
src/core/src/blob/: TTCNBuiltinDefs.inc
src/core/src/utils/: ASTUtils.cpp  FileReader.cpp  SemanticUtils.cpp
src/core/test/: CrossbindTest.cpp  ParserTest.cpp  ProgramTest.cpp  ScannerTest.cpp
src/core/test/helpers/: ASTHelpers.h  CommonHelpers.h  TestPrinters.h
src/core/test/mocks/: FilesystemMock.h
src/core/tools/: nodegen.py
src/lint/: CMakeLists.txt
src/lint/include/: BuiltinRules.h  Context.h  Linter.h  Rule.h
src/lint/include/rules/: Agent.h  NoEmpty.h  NoUnusedImports.h  NoUnusedVars.h  PreferConst.h
src/lint/src/: Linter.cpp  PrecompiledRules.cpp
src/lint/src/rules/: NoEmpty.cpp  NoUnnecessaryValueof.cpp  NoUnusedImports.cpp  NoUnusedVars.cpp  PreferConst.cpp
src/ls/: CMakeLists.txt
src/ls/include/: LSMethod.h  LanguageServerClientMessaging.h  LanguageServerContext.h  LanguageServerConv.h  LanguageServerDiagnostic.h  LanguageServerHelpers.h  LanguageServerLogger.h  LanguageServerMethods.h  LanguageServerProcedures.h  LanguageServerSession.h
src/ls/include/detail/: CodeAction.h  Completion.h  Definition.h  Diagnostic.h  Helpers.h  InlayHint.h  LanguageServerCompletion.h  LanguageServerConv.h  LanguageServerSymbolDef.h  References.h
src/ls/include/domain/: LanguageServerDiagnostic.h  LanguageServerSymbolDef.h
src/ls/interface/: LanguageServer.h
src/ls/src/: LangaugeServer.cpp  LanguageServer.cpp  LanguageServerClientMessaging.cpp  LanguageServerContext.h  LanguageServerHelpers.cpp  LanguageServerSolution.cpp
src/ls/src/detail/: CodeAction.cpp  Completion.cpp  Definition.cpp  Diagnostic.cpp  Helpers.cpp  InlayHint.cpp  LanguageServerCompletion.cpp  LanguageServerCoreUtils.cpp  LanguageServerDiagnostic.cpp  LanguageServerSymbolDef.cpp  References.cpp
src/ls/src/domain/: LanguageServerDiagnostic.cpp  LanguageServerSymbolDef.cpp
src/ls/src/methods/: exit.cpp  initialize.cpp  initialized.cpp  shutdown.cpp
src/ls/src/procedures/: exit.cpp  initialize.cpp  shutdown.cpp
src/project/: CMakeLists.txt
src/project/include/: Project.h
src/project/src/: Project.cpp
src/project/test/: ProjectTest.cpp
src/tooling/: CMakeLists.txt
src/tooling/include/: Filesystem.h  Project.h  ProjectSorter.h  Solution.h  VirtualFS.h
src/tooling/include/impl/: SystemFS.h
src/tooling/include/utils/: FileReader.h
src/tooling/src/: CompilerExtensionManager.cpp  Project.cpp  ProjectSorter.cpp  Solution.cpp  VirtualFS.cpp
src/tooling/src/impl/: SystemFS.cpp
src/tooling/src/utils/: FileReader.cpp
test/core/runner/: CMakeLists.txt
test/core/runner/include/: CoreTests.h  RunnerOpts.h
test/core/runner/src/: Runner.cpp
(+231 files in other folders)
