[project]
name = "vanadium"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.11.11,<0.12.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "types-invoke (>=2.0.0.10,<3.0.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.uv]
package = false

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
